# goit-pyweb-hw-13-2-Django

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pyvenv.cfg
quotes/: forms.py  utils.py
quotes/migrations/: 0001_initial.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: addauthor.html  addquote.html  addtag.html  base.html  index.html
quotes/templatetags/: extract.py
users/: forms.py
users/templates/users/: login.html  password_reset.html  signup.html
utils/: add_quotes_to_mongo.py
