[tool.poetry]
name = "hw-10-new"
version = "0.1.0"
description = ""
authors = ["MaksymSW <maksym.shvyedkin@gmail.com>"]
license = "MaxSW"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
